--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "4.0.3"
+    "react-router": "6.8.1-pre.0",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "^2.1.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
     "process": "^0.11.10"
   }
 }
+
+
