--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "react-dom": "^18.2.0",
     "react-router": "6.8.1-pre.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "@reduxjs/toolkit": "1.9.2",
+    "react-redux": "8.0.5"
+
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
