--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "dependencies": {
+    "@reduxjs/toolkit": "1.9.2",
     "bootstrap": "^5.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-redux": "8.0.5",
     "react-router": "6.8.1-pre.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "^2.1.3",
-    "@reduxjs/toolkit": "1.9.2",
-    "react-redux": "8.0.5"
-
+    "react-scripts": "^2.1.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
+    "parcel": "^2.8.2",
     "process": "^0.11.10"
   }
 }
-
-
