--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "react-redux": "8.0.5",
     "react-router": "6.8.1-pre.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "@parcel/transformer-sass": "^2.8.2"
+
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.2",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   }
